pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-pvc
      containers:
      - name: n8n
        image: n8nio/n8n
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /n8n
