3.postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
