8.lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
  namespace: n8n
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: LoadBalancer
